--- a/AulaPython.ipynb
+++ b/AulaPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "AulaPython.ipynb",
-      "authorship_tag": "ABX9TyMUB3i1vFi6wx4s8RsYjflz",
+      "authorship_tag": "ABX9TyM//9NU4KlYvSnV03iHkrHr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "aula 1"
+        "aula 1 🍃"
       ],
       "metadata": {
         "id": "bK7fruxanWJJ"
@@ -96,7 +96,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "aula 2"
+        "aula 2 ✨"
       ],
       "metadata": {
         "id": "87Tr7kQmhoDY"
@@ -251,6 +251,37 @@
           "name": "stdout",
           "text": [
             "Os pontos totais de Marcelo são 230 e sua media é 32\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_de_figurinhas = int(input(\"Digite o total de figurinhas: \"))\n",
+        "numero_de_amigos = int(input(\"Digite o número de amigos: \"))\n",
+        "figurinhas_amigo = total_de_figurinhas // (numero_de_amigos + 2)\n",
+        "figurinhas_joao = 2 * figurinhas_amigo\n",
+        "\n",
+        "print(f\"João recebeu {figurinhas_joao} figurinhas\")"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CepUSa6qsZ7q",
+        "outputId": "6d536559-b70e-4ba9-83b1-af7d0bc18cce"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o total de figurinhas: 20\n",
+            "Digite o número de amigos: 5\n",
+            "João recebeu 4 figurinhas\n"
           ]
         }
       ]
